# fiducial-marker-gazebo-experiment

./: .gitignore  README.md
angle_checker/: CMakeLists.txt  README.md  package.xml
angle_checker/data/: movement.yaml
angle_checker/include/angle_utility/: angle_calculate_utility.h  angle_checker.h  angle_gazebo_checker.h  model_gazebo_setter.h  transform_utility.hpp
angle_checker/src/: angle_checker.cpp  angle_gazebo_checker.cpp  fake_camera_info.cc  model_gazebo_setter.cc
rrbot_description/launch/: rrbot.rviz  rrbot_rviz.launch
rrbot_description/urdf/: robot.xml  rrbot.gazebo  rrbot.xacro
rrbot_gazebo/launch/: rrbot_world_mvingtag.launch  rrbot_world_static.launch
rrbot_gazebo/meshes/: apriltag_2_2_0.1.dae  apriltag_2_2_0.1_animated.dae
rrbot_gazebo/models/picture_wall/: model.config  model.sdf  picture_wall.dae
rrbot_gazebo/models/tag_positioned/: model.config  model.sdf  tag_positioned.dae
rrbot_gazebo/worlds/: rrbot_moving_tag.world  rrbot_moving_tag_backgtound.world  rrbot_rotation_tag(复件).world  rrbot_rotation_tag.world  rrbot_static_tag.world  tag_camera.world
