<package>
    <name>angle_utility</name>
    <version>0.0.0</version>

    <description>
        check angle_utility 
    </description>

    <author>vicky</author>
    <author email="mymy@tencent.com">lin</author>
    <license>GPL</license>
    <maintainer email="TODO@todo.com">TODO</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>tf</run_depend>

</package>
